2nd Commit, html and CSS complete

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="gradient">
     <header>
-        <h1>Matching Game</h1>
+        <h1>Food Matching Game</h1>
     </header>
 
     <div class="gameControlsContainer">
@@ -28,110 +28,106 @@
 
         </div>
     </div>
+    <section class='gameContainer'>
+        <section class="cardContainer">
+            <div class='card'>
+                <div class='cardBack cardFace'>
+                    <img src='./assets/food/cardBackPan180.jpg'>
+                </div>
+                <div class='cardFront cardFace'>
+                    <img src='./assets/food/Hamburger180.jpg'>
+                </div>
+            </div>
+            <div class='card'>
+                <div class='cardBack cardFace'>
+                    <img src='./assets/food/cardBackPan180.jpg'>
+                </div>
+                <div class='cardFront cardFace'>
+                    <img src='./assets/food/Hamburger180.jpg'>
+                </div>
+            </div>
+            <div class='card'>
+                <div class='cardBack cardFace'>
+                    <img src='./assets/food/cardBackPan180.jpg'>
+                </div>
+                <div class='cardFront cardFace'>
+                    <img src='./assets/food/Pizza180.jpg'>
+                </div>
+            </div>
+            <div class='card'>
+                <div class='cardBack cardFace'>
+                    <img src='./assets/food/cardBackPan180.jpg'>
+                </div>
+                <div class='cardFront cardFace'>
+                    <img src='./assets/food/Pizza180.jpg'>
+                </div>
+            </div>
+            <div class='card'>
+                <div class='cardBack cardFace'>
+                    <img src='./assets/food/cardBackPan180.jpg'>
+                </div>
+                <div class='cardFront cardFace'>
+                    <img src='./assets/food/Spaghetti180.jpg'>
+                </div>
+            </div>
+            <div class='card'>
+                <div class='cardBack cardFace'>
+                    <img src='./assets/food/cardBackPan180.jpg'>
+                </div>
+                <div class='cardFront cardFace'>
+                    <img src='./assets/food/Spaghetti180.jpg'>
+                </div>
+            </div>
+            <div class='card'>
+                <div class='cardBack cardFace'>
+                    <img src='./assets/food/cardBackPan180.jpg'>
+                </div>
+                <div class='cardFront cardFace'>
+                    <img src='./assets/food/Steak180.jpg'>
+                </div>
+            </div>
+            <div class='card'>
+                <div class='cardBack cardFace'>
+                    <img src='./assets/food/cardBackPan180.jpg'>
+                </div>
+                <div class='cardFront cardFace'>
+                    <img src='./assets/food/Steak180.jpg'>
+                </div>
+            </div>
+            <div class='card'>
+                <div class='cardBack cardFace'>
+                    <img src='./assets/food/cardBackPan180.jpg'>
+                </div>
+                <div class='cardFront cardFace'>
+                    <img src='./assets/food/Sushi180.jpg'>
+                </div>
+            </div>
+            <div class='card'>
+                <div class='cardBack cardFace'>
+                    <img src='./assets/food/cardBackPan180.jpg'>
+                </div>
+                <div class='cardFront cardFace'>
+                    <img src='./assets/food/Sushi180.jpg'>
+                </div>
+            </div>
+            <div class='card'>
+                <div class='cardBack cardFace'>
+                    <img src='./assets/food/cardBackPan180.jpg'>
+                </div>
+                <div class='cardFront cardFace'>
+                    <img src='./assets/food/Tacos180.jpg'>
+                </div>
+            </div>
+            <div class='card'>
+                <div class='cardBack cardFace'>
+                    <img src='./assets/food/cardBackPan180.jpg'>
+                </div>
+                <div class='cardFront cardFace'>
+                    <img src='./assets/food/Tacos180.jpg'>
+                </div>
+            </div>
 
-    <section class="cardContainer">
-        <div class='row'>
-            <div class='card column'>
-                <div class='cardBack'>
-                    <img src='./assets/food/cardBackPan180.jpg'>
-                </div>
-                <div class='cardFront'>
-                    <img src='./assets/food/Hamburger180.jpg'>
-                </div>
-            </div>
-            <div class='card column'>
-                <div class='cardBack'>
-                    <img src='./assets/food/cardBackPan180.jpg'>
-                </div>
-                <div class='cardFront'>
-                    <img src='./assets/food/Hamburger180.jpg'>
-                </div>
-            </div>
-            <div class='card column'>
-                <div class='cardBack'>
-                    <img src='./assets/food/cardBackPan180.jpg'>
-                </div>
-                <div class='cardFront'>
-                    <img src='./assets/food/Pizza180.jpg'>
-                </div>
-            </div>
-            <div class='card column'>
-                <div class='cardBack'>
-                    <img src='./assets/food/cardBackPan180.jpg'>
-                </div>
-                <div class='cardFront'>
-                    <img src='./assets/food/Pizza180.jpg'>
-                </div>
-            </div>
-        </div>
-        <div class='row'>
-            <div class='card column'>
-                <div class='cardBack'>
-                    <img src='./assets/food/cardBackPan180.jpg'>
-                </div>
-                <div class='cardFront'>
-                    <img src='./assets/food/Spaghetti180.jpg'>
-                </div>
-            </div>
-            <div class='card column'>
-                <div class='cardBack'>
-                    <img src='./assets/food/cardBackPan180.jpg'>
-                </div>
-                <div class='cardFront'>
-                    <img src='./assets/food/Spaghetti180.jpg'>
-                </div>
-            </div>
-            <div class='card column'>
-                <div class='cardBack'>
-                    <img src='./assets/food/cardBackPan180.jpg'>
-                </div>
-                <div class='cardFront'>
-                    <img src='./assets/food/Steak180.jpg'>
-                </div>
-            </div>
-            <div class='card column'>
-                <div class='cardBack'>
-                    <img src='./assets/food/cardBackPan180.jpg'>
-                </div>
-                <div class='cardFront'>
-                    <img src='./assets/food/Steak180.jpg'>
-                </div>
-            </div>
-        </div>
-        <div class='row'>
-            <div class='card column'>
-                <div class='cardBack'>
-                    <img src='./assets/food/cardBackPan180.jpg'>
-                </div>
-                <div class='cardFront'>
-                    <img src='./assets/food/Sushi180.jpg'>
-                </div>
-            </div>
-            <div class='card column'>
-                <div class='cardBack'>
-                    <img src='./assets/food/cardBackPan180.jpg'>
-                </div>
-                <div class='cardFront'>
-                    <img src='./assets/food/Sushi180.jpg'>
-                </div>
-            </div>
-            <div class='card column'>
-                <div class='cardBack'>
-                    <img src='./assets/food/cardBackPan180.jpg'>
-                </div>
-                <div class='cardFront'>
-                    <img src='./assets/food/Tacos180.jpg'>
-                </div>
-            </div>
-            <div class='card column'>
-                <div class='cardBack'>
-                    <img src='./assets/food/cardBackPan180.jpg'>
-                </div>
-                <div class='cardFront'>
-                    <img src='./assets/food/Tacos180.jpg'>
-                </div>
-            </div>
-        </div>
+        </section>
     </section>
     <script src="script.js" async defer></script>
 </body>
